--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.6.5",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-chat-scroll": "^1.4.0",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
